--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 ================================================== -->
 <section class="featured-posts">
     <div class="section-title">
-        <h2><span>Events (<a href="categories#events">view all</a>)</span></h2>
+        <h2><span>Recent and upcoming events (<a href="categories#events">view all</a>)</span></h2>
     </div>
     <div class="row">
 
