Added optional date time to event box. Added event box to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 
         {% if post.event == true %}
 
-            {% include featuredbox.html %}
+            {% include eventbox.html %}
 
         {% endif %}
 
