--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ title: Home
 
                 <section class="featured-posts">
                     <div class="section-title">
+                        
+                        <!-- debug 1 -->
+                        
                         <h2><span>Recent and upcoming events (<a href="categories#events">view all</a>)</span></h2>
                     </div>
                     <div class="row">
@@ -39,6 +42,9 @@ title: Home
         {% if post.blog == true %}
             <section class="featured-posts">
                 <div class="section-title">
+
+                    <!-- debug 2 -->
+
                     <h2><span>Recent blog posts (<a href="categories#blog">view all</a>)</span></h2>
                 </div>
                 <div class="row">
@@ -60,6 +66,8 @@ title: Home
 <section class="recent-posts">
 
     <div class="section-title">
+
+        <!-- debug 3 -->
 
         <h2><span>All Stories</span></h2>
 
