Added markdown debug comments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
                 <section class="featured-posts">
                     <div class="section-title">
                         
-                        <!-- debug 1 -->
+                        <!--- debug 1 --->
                         
                         <h2><span>Recent and upcoming events (<a href="categories#events">view all</a>)</span></h2>
                     </div>
@@ -43,7 +43,7 @@ title: Home
             <section class="featured-posts">
                 <div class="section-title">
 
-                    <!-- debug 2 -->
+                    <!--- debug 2 --->
 
                     <h2><span>Recent blog posts (<a href="categories#blog">view all</a>)</span></h2>
                 </div>
@@ -67,7 +67,7 @@ title: Home
 
     <div class="section-title">
 
-        <!-- debug 3 -->
+        <!--- debug 3 --->
 
         <h2><span>All Stories</span></h2>
 
