--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
                         
                         <!--- debug 1 --->
                         
-                        <h2><span>Recent and upcoming events (<a href="categories#events">view all</a>)</span></h2>
+                        <h2><span>Recent and upkoming events (<a href="categories#events">view all</a>)</span></h2>
                     </div>
                     <div class="row">
                         {% for post in site.posts %}
